--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/avhixorin/image/upload/v1731263500/wordChampFav-removebg-preview_enhanced_ihubfe.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Word Champ</title>
   </head>
